feat: 降低JDK版本到1.8;优化代码解析