@@ -30,16 +30,10 @@ apply plugin: 'application'
 mainClassName = "com.rapid.develop.core.server.ApplicationServer"
 
 group 'com.linkkou'
-version '3.0.0'
+version '3.0.1'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
-
-
-applicationDefaultJvmArgs = [
-        '-javaagent:/Applications/jetbra/fineagent.jar=jetbrains',
-        '--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED',
-        '--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED']
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     maven { url 'https://maven.aliyun.com/repository/public/' }
@@ -47,9 +41,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    /*compile group: 'com.alibaba', name: 'druid', version: '1.1.23'*/
+    testCompile group: 'junit', name: 'junit', version: '4.13.1'
     /*compile fileTree(dir: 'libs', include: [ '*'])*/
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
 }
 /*https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#intellij-platform-based-products-of-recent-ide-versions*/
 intellij {
